--- a/homogeneous.tex
+++ b/homogeneous.tex
@@ -135,7 +135,7 @@ For finite-set-homogeneous we get in addition infinite-dimensional analogs of th
 in particular the Hilbert space.
 
 \parbf{Acknowledgments.}
-The second author want to thank Rostislav Matveyev for an interesting discussion on the Rubinstein Street. 
+The second author wants to thank Rostislav Matveyev for an interesting discussion on the Rubinstein Street. 
 
 The first author was partially supported by the Russian Foundation for Basic Research grant 20-01-00070, 
 the second author was partially supported by the National Science Foundation grant DMS-2005279.
