--- a/library.bib
+++ b/library.bib
@@ -16,9 +16,72 @@
 MRREVIEWER = {L. Auslander},
 }
 
+@article {ben-yaacov,
+    AUTHOR = {Ben Yaacov, I.},
+     TITLE = {Fraïssé limits of metric structures},
+   JOURNAL = {J. Symb. Log.},
+  FJOURNAL = {The Journal of Symbolic Logic},
+    VOLUME = {80},
+      YEAR = {2015},
+    NUMBER = {1},
+     PAGES = {100--115},
+      ISSN = {0022-4812},
+   MRCLASS = {03C30 (03C52 03C68)},
+  MRNUMBER = {3320585},
+MRREVIEWER = {M. Yasuhara},
+       DOI = {10.1017/jsl.2014.71},
+       URL = {https://doi.org/10.1017/jsl.2014.71},
+}
+
+@article {birkhoff,
+    AUTHOR = {Birkhoff, G.},
+     TITLE = {Metric foundations of geometry. {I}},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {55},
+      YEAR = {1944},
+     PAGES = {465--492},
+      ISSN = {0002-9947},
+   MRCLASS = {48.0X},
+  MRNUMBER = {10393},
+MRREVIEWER = {L. M. Blumenthal},
+       DOI = {10.2307/1990304},
+       URL = {https://doi.org/10.2307/1990304},
+}
+
+
+@article {bogaty,
+    AUTHOR = {Bogatyi, S. A.},
+     TITLE = {Metrically homogeneous spaces},
+   JOURNAL = {Russian Math. Surveys},
+    VOLUME = {57},
+      YEAR = {2002},
+    NUMBER = {2},
+     PAGES = {221–-240},
+      ISSN = {0042-1316},
+   MRCLASS = {54F65 (53C70)},
+  MRNUMBER = {1918193},
+MRREVIEWER = {Vitali Kapovitch},
+       DOI = {10.1070/RM2002v057n02ABEH000495},
+       URL = {https://doi.org/10.1070/RM2002v057n02ABEH000495},
+}
+
+@book {busemann,
+    AUTHOR = {Busemann, H.},
+     TITLE = {Metric {M}ethods in {F}insler {S}paces and in the
+              {F}oundations of {G}eometry},
+    SERIES = {Annals of Mathematics Studies, No. 8},
+ PUBLISHER = {Princeton University Press, Princeton, N. J.},
+      YEAR = {1942},
+     PAGES = {viii+243},
+   MRCLASS = {48.0X},
+  MRNUMBER = {0007251},
+MRREVIEWER = {S. M. Ulam},
+}
+
 @article {dyubina-polterovich,
     AUTHOR = {Dyubina, A. and Polterovich, I.},
-     TITLE = {Explicit constructions of universal {$\Bbb R$}-trees and
+     TITLE = {Explicit constructions of universal {$\mathbb{R}$}-trees and
               asymptotic geometry of hyperbolic spaces},
    JOURNAL = {Bull. London Math. Soc.},
   FJOURNAL = {The Bulletin of the London Mathematical Society},
@@ -31,6 +94,15 @@ MRREVIEWER = {L. Auslander},
   MRNUMBER = {1853785},
        DOI = {10.1112/S002460930100844X},
        URL = {https://doi.org/10.1112/S002460930100844X},
+}
+
+@MISC {hanson,
+    TITLE = {All-set-homogeneous spaces},
+    AUTHOR = {J. Hanson},
+    HOWPUBLISHED = {MathOverflow},
+   % NOTE = {URL:https://mathoverflow.net/q/430738 (version: 2022-09-19)},
+    EPRINT = {https://mathoverflow.net/q/430738},
+   % URL = {https://mathoverflow.net/q/430738}
 }
 
 @MISC {rourke,
