--- a/paper.sty
+++ b/paper.sty
@@ -193,3 +193,8 @@ isbn=false]{biblatex}
 \newcommand\longhookrightarrowfill@{%
   \arrowfill@\hook\relbar\rightarrow}
 \makeatother
+
+\hyphenation{
+Pol-te-ro-vich
+Ury-sohn
+}
