--- a/homogen.tex
+++ b/homogen.tex
@@ -40,7 +40,7 @@ We give a classification of a certain subclass of all-set-homogeneous length spa
 A metric space $M$ is said to be \emph{all-set-homogeneous} if for any subset $A\subset M$ any distance-preserving map $A\to M$ can be extended to an isometry $M\to M$.
 
 Examples of all-set-homogeneous spaces include all \emph{classical spaces};
-these are complete simply-connected Rieamnnian maniflds.
+these are complete simply-connected Rieamnnian maniflds and the circles.
 
 Nonclassical examples include the universal $\RR$-trees of finite valence;
 these are discussed in the next section.
