--- a/library.bib
+++ b/library.bib
@@ -68,12 +68,12 @@ MRREVIEWER = {Vitali Kapovitch},
 
 @book {busemann,
     AUTHOR = {Busemann, H.},
-     TITLE = {Metric {M}ethods in {F}insler {S}paces and in the
-              {F}oundations of {G}eometry},
+     TITLE = {Metric methods in {F}insler spaces and in the
+              foundations of geometry},
     SERIES = {Annals of Mathematics Studies, No. 8},
- PUBLISHER = {Princeton University Press, Princeton, N. J.},
+ %PUBLISHER = {Princeton University Press, Princeton, N. J.},
       YEAR = {1942},
-     PAGES = {viii+243},
+  %   PAGES = {viii+243},
    MRCLASS = {48.0X},
   MRNUMBER = {0007251},
 MRREVIEWER = {S. M. Ulam},
