--- a/library.bib
+++ b/library.bib
@@ -66,6 +66,32 @@ MRREVIEWER = {Vitali Kapovitch},
        URL = {https://doi.org/10.1070/RM2002v057n02ABEH000495},
 }
 
+Успехи математических наук, 2002, том 57, выпуск 2(344), страницы 3–22
+DOI: https://doi.org/10.4213/rm495	(Mi rm495) 		  	
+Эта публикация цитируется в 15 научных статьях (всего в 15 статьях)
+
+Метрически однородные пространства
+
+С. А. Богатый
+
+@article {bogaty-ru,
+    AUTHOR = {Богатый, С. А.},
+     TITLE = {Метрически однородные пространства},
+   JOURNAL = {Успехи математических наук},
+    VOLUME = {57},
+      YEAR = {2002},
+    NUMBER = {2},
+     PAGES = {3---22},
+      ISSN = {0042-1316},
+   MRCLASS = {54F65 (53C70)},
+  MRNUMBER = {1918193},
+MRREVIEWER = {Vitali Kapovitch},
+       DOI = {10.1070/RM2002v057n02ABEH000495},
+       URL = {https://doi.org/10.1070/RM2002v057n02ABEH000495},
+       language={russian},
+       hypernation={russian},
+}
+
 @book {busemann,
     AUTHOR = {Busemann, H.},
      TITLE = {Metric methods in {F}insler spaces and in the
