--- a/homogen-en.tex
+++ b/homogen-en.tex
@@ -134,6 +134,12 @@ It remains to show that $A=\TT_n$ and $A'=\TT_n$.
 
 Note that $A$ is closed.
 
+\begin{wrapfigure}{o}{23 mm}
+\vskip-6mm
+\centering
+\includegraphics{mppics/pic-10}
+\end{wrapfigure}
+
 Further, suppose $x,y,z\in A$ and $s\in [yz]_{\TT_n}$.
 Since $\TT_n$ is a metric tree, the distance $|x-s|_{\TT_n}$ is completely determined by four values $|x-y|_{\TT_n}$, $|x-z|_{\TT_n}$, $|s-y|_{\TT_n}$, $|s-z|_{\TT_n}$.
 
