--- a/homogen-ru.tex
+++ b/homogen-ru.tex
@@ -31,7 +31,7 @@ pdfauthor={\theauthors}
 \maketitle
 
 \begin{abstract}
-Метрическое пространство называется полностью однородным если любая изометрия между его подмножествами продолжается до изометрии всего пространства.
+Метрическое пространство называется полностью однородным, если любая изометрия между его подмножествами продолжается до изометрии всего пространства.
 Мы классифицируем определённый подкласс полностью однородных пространств с внутренней метрикой.
 \end{abstract}
 
@@ -41,7 +41,7 @@ pdfauthor={\theauthors}
 Метрика на $M$ называется \emph{внутренней} (\emph{геодезической}) если любые две точки $x,y\in M$ можно соединить путём $\gamma$ таким, что расстояние $|x-y|_M$ произвольно близко к длине $\gamma$ (или, соответственно, равно этой длине).
 Очевидно, что любая геодезическая метрика внутренняя, но не наоборот.
 
-Метрическое пространство $M$ называется \emph{полностью однородным} если любая изометрия $A\to A'$ между его подмножествами продолжается до изометрии $M\to M$ всего пространства.
+Метрическое пространство $M$ называется \emph{полностью однородным}, если любая изометрия $A\to A'$ между его подмножествами продолжается до изометрии $M\to M$ всего пространства.
 
 Примеры геодезических полностью однородных пространств включают односвязные римановы многообразия постоянной кривизны и окружности с внутренней метрикой.
 Эти примеры будут называться \emph{классическими пространствами},
@@ -72,7 +72,7 @@ $x_1,\dots, x_n\in M$.
 \item \emph{Любое локально компактное 3-точечно однородное пространство с внутренней метрикой  является классическим.} 
 Доказано Гербертом Буземаном \cite{busemann}.
 Это утверждение также следует из более общего результата Жака Титса \cite{tits} о двуточечно однородных пространствах.
-(Пространство называется $n$-точечно однородным если любая изометрия между его подмножествами с не более чем $n$ точками в каждом продолжается до изометрии всего пространства.)
+(Пространство называется $n$-точечно однородным, если любая изометрия между его подмножествами с не более чем $n$ точками в каждом продолжается до изометрии всего пространства.)
 \end{itemize}
 Подробное обсуждение этих и других связанных результатов дано в обзоре Семёна Богатого \cite{bogaty-ru}.
 
@@ -81,13 +81,13 @@ $x_1,\dots, x_n\in M$.
 Поэтому можно предположить, что $M$ не локально компактно.
 
 В этом случае существует бесконечная последовательность точек $x_1$, $x_2,\dots$ такая, что $\eps<|x_i-x_j|_M<1$ для некоторого $\eps>0$ и всех $i\ne j$.
-Применив теорему Рамсея, получаем что для произвольного целого $n\ge 1$ существует последовательность $x_1,x_2,\dots,x_n$ такая, что все расстояния $|x_i-x_j|_M$ лежат в произвольно малом подинтервале $(\eps,1)$.
+Применив теорему Рамсея, получаем, что для произвольного целого $n\ge 1$ существует последовательность $x_1,x_2,\dots,x_n$ такая, что все расстояния $|x_i-x_j|_M$ лежат в произвольно малом подинтервале $(\eps,1)$.
 Поскольку отпечатки замкнуты, существует произвольно длинная последовательность $x_1,x_2,\dots,x_n$ такая, что
-$|x_i\z-x_j|_M= r$ для некоторого фиксированного $r>0$.
+$|x_i\z-x_j|_M= r$ для некоторого фиксированного $r>0$ и всех $i\ne j$.
 
-Выберем максимальное (относительно включения) множество точек $A$ с расстоянием $r$ между любой его парой.
+Выберем максимальное (относительно включения) множество $A$ с расстоянием $r$ между любыми двумя его точками.
 Поскольку $M$ полностью однородно, множество $A$ обязано быть бесконечным.
-В частности, существует отображение $f\:A\to A$ которое инъективно, но не сюрьективно.
+В частности, существует отображение $f\:A\to A$, которое инъективно, но не сюрьективно.
 
 Заметим, что $f$ сохраняет расстояния.
 Поскольку $A$ максимально, для любой точки $y\notin A$ существует $x\in A$ такая, что $|y-x|_M\ne r$.
@@ -129,6 +129,12 @@ $|x_i\z-x_j|_M= r$ для некоторого фиксированного $r>0
 
 Заметим, что $A$ замкнуто.
 
+\begin{wrapfigure}{o}{23 mm}
+\vskip-6mm
+\centering
+\includegraphics{mppics/pic-10}
+\end{wrapfigure}
+
 Далее, предположим $x,y,z\in A$ и $s\in [yz]_{\TT_n}$.
 Поскольку $\TT_n$ --- метрическое дерево, расстояние $|x-s|_{\TT_n}$ полностью определяется четвёркой чисел 
 $|x-y|_{\TT_n}$, $|x-z|_{\TT_n}$, $|s-y|_{\TT_n}$, $|s-z|_{\TT_n}$.
@@ -143,7 +149,7 @@ $|x-y|_{\TT_n}$, $|x-z|_{\TT_n}$, $|s-y|_{\TT_n}$, $|s-z|_{\TT_n}$.
 В частности, $A$ --- метрическое дерево максимальной валентности не больше $n$.
 
 Предположим $A\ne \TT_n$.
-Выберем $a\in A$ and $b\notin A$.
+Выберем $a\in A$ и $b\notin A$.
 Пусть $c\in A$ --- последняя точка на кратчайшей $[ab]_{\TT_n}$.
 Заметим, что валентность $c$ в $A$ строго меньше $n$.
 
