--- a/homogen-en.tex
+++ b/homogen-en.tex
@@ -199,7 +199,7 @@ This note is inspired by the question of Joseph O'Rourke \cite{rourke}.
 We want to thank James Hanson for his interesting and detailed comments on our question \cite{hanson}.
 The second author wants to thank Rostislav Matveyev for an interesting discussion on Rubinstein Street. 
 
-The first author was partially supported by the Russian Foundation for Basic Research grant 20-01-00070; the second author was partially supported by the National Science Foundation grant DMS-2005279.
+The first author was partially supported by the Russian Foundation for Basic Research grant 20-01-00070; the second author was partially supported by the National Science Foundation grant DMS-2005279 and the Ministry of Education and Science of the Russian Federation, grant 075-15-2022-289.
 
 {\sloppy
 \printbibliography[heading=bibintoc]
